Basket and Home Providers completed

--- a/Dominos.Web.UI/appsettings.Development.json
+++ b/Dominos.Web.UI/appsettings.Development.json
@@ -3,6 +3,12 @@
     "DominosApiUrl": "http://localhost:5001/api/",
     "ProductServices": {
       "GetPizzas": "product/get-pizzas"
+    },
+    "BasketServices": {
+      "GetBasket": "basket/get",
+      "AddProductToBasket": "basket/add-product",
+      "DecreaseProductFromBasket": "basket/decrease-product",
+      "DeleteProductFromBasket": "basket/delete-product"
     }
   }
 }
