--- a/Dominos.Web.UI/appsettings.json
+++ b/Dominos.Web.UI/appsettings.json
@@ -5,7 +5,10 @@
       "GetPizzas": "product/get-pizzas"
     },
     "BasketServices": {
-      "GetBasket": "basket/get"
+      "GetBasket": "basket/get",
+      "AddProductToBasket": "basket/add-product",
+      "DecreaseProductFromBasket": "basket/decrease-product",
+      "DeleteProductFromBasket": "basket/delete-product"
     }
   }
 }
