Back-end development completed.

--- a/Dominos.Web.UI/appsettings.Development.json
+++ b/Dominos.Web.UI/appsettings.Development.json
@@ -9,6 +9,11 @@
       "AddProductToBasket": "basket/add-product",
       "DecreaseProductFromBasket": "basket/decrease-product",
       "DeleteProductFromBasket": "basket/delete-product"
+    },
+    "CustomerServices": {
+      "Login": "customer/login",
+      "Register": "customer/register",
+      "CustomerById": "customer/get"
     }
   }
 }
